# lit_gadgetron

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build-images.sh  build_images.sh  environment.yml
.github/workflows/: docker-build.yml
Feedback/: FeedbackData.h  MessageID.h
Feedback/gadgetron_ismrmrd_client_feedback/: gadgetron_ismrmrd_client_feedback.cpp
Feedback/readers/: FeedbackReader.cpp  FeedbackReader.h
Feedback/writers/: FeedbackWriter.cpp  FeedbackWriter.h
Writers/: FeedbackData.h
apps/gadgetron/connection/: HeaderConnection.cpp
cmake/: FindCUDA_advanced.cmake
config/: mrd_dump.xml
doc/source/: gadget.rst
docs/: installation.rst
gadgets/mri_core/: ImageArraySendMixin.hpp
gadgets/mri_core/generic_recon_gadgets/: GenericReconCartesianGrappaGadget.cpp
scripts/: build-docker.sh
test/: CMakeLists.txt  cuNFFT_test.cpp  cuNonCartesianMOCOOperator_fc_test.cpp  cuVector_td_test_kernels.cu  gpuSVD_test.cpp
test/integration/: data.json  run_gadgetron_test.py
test/integration/cases/: gpu_spiral_3D_imoco.cfg
toolboxes/: CMakeLists.txt
toolboxes/core/gpu/: cuNDArray.h  cuNDArray_elemwise.h  cudaDeviceManager.h
toolboxes/mri_core/: mri_core_grappa.cpp
toolboxes/nhlbi_gt_toolbox/: CMakeLists.txt  DartConfiguration.tcl  Dockerfile  build_images.sh  environment.yml
toolboxes/nhlbi_gt_toolbox/GIRF/GIRF_20250225/: GIRF_fmax_x.txt  GIRF_fmax_y.txt  GIRF_fmax_z.txt  GIRFx.txt  GIRFy.txt  GIRFz.txt
toolboxes/nhlbi_gt_toolbox/cmake/: cpack_options.cmake.in
toolboxes/nhlbi_gt_toolbox/cmake/debian/: postinst  prerm
toolboxes/nhlbi_gt_toolbox/config/: cardiopulmonary_recon.xml  cardiovascular_iMOCO.xml  pulmonary_MOCOLR.xml  spiral_3DRT.xml  spiral_3DRT_CSM.xml
toolboxes/nhlbi_gt_toolbox/doc/: hardwarerequirement.rst  installation.rst
toolboxes/nhlbi_gt_toolbox/gadgets/: CMakeLists.txt
toolboxes/nhlbi_gt_toolbox/gadgets/noncart_recon/: Noncart_recon_gadget.cpp  Spiral_3DRT.cpp  Spiral_Rovir.cpp
toolboxes/nhlbi_gt_toolbox/gadgets/utility_gadgets/: AcquisitionReconParamsFanout.cpp  AcquisitionReconParamsFanout.h  AcquisitionStopTimingGadget.cpp  ImagetoVector.cpp  PrepreconParams.cpp  RemoveSpiralOversampling.cpp  SelectEchoes.cpp  SpiralAccumulateFast.cpp  SpiralAcquisitionCropData.cpp  SpiralBufferFanout.h  removeNavAcq.cpp
toolboxes/nhlbi_gt_toolbox/gadgets/waveforms/: AcquisitionWaveformFanout.h  RemoveAcqsGadget.cpp  RemoveNavsGadget.cpp  WaveformToTrajectory.cpp  WaveformToTrajectory.h
toolboxes/nhlbi_gt_toolbox/spiral/: SpiralBuffer.h  TrajectoryParameters_lit.cpp  TrajectoryParameters_lit.h  vds.h
toolboxes/nhlbi_gt_toolbox/spiral/reconstruction/: SpiralReconBuffer.h  cuGpBbSolver.h  cuGpBbSolver_lit.h  cuLocallyLowRankOperator.cpp  cuLocallyLowRankOperator.h  cuLowRankOperator.cpp  cuLowRankOperator.h  cuMOCOLowRankOperator.cpp  cuMOCOLowRankOperator.h  cuNonCartesianMOCOOperator.cu  cuNonCartesianMOCOOperator.h  cuNonCartesianMOCOOperator_fc.cpp  cuNonCartesianMOCOOperator_fc.h  cuNonCartesianSenseOperator_fc.h  cuNonCartesianTSenseOperator.cpp  cuNonCartesianTSenseOperator.h  cuNonCartesianTSenseOperator_fc.cpp  cuNonCartesianTSenseOperator_fc.h  densityCompensation.cpp  densityCompensation.h  gpBbSolver.h  gpBbSolver_lit.h  noncartesian_reconstruction.cpp  noncartesian_reconstruction.h  noncartesian_reconstruction_2Dt.cpp  noncartesian_reconstruction_2Dt.h  noncartesian_reconstruction_3D.cpp  noncartesian_reconstruction_3D.h  noncartesian_reconstruction_4D.cpp  noncartesian_reconstruction_4D.h  noncartesian_reconstruction_5D.cpp  noncartesian_reconstruction_5D.h  noncartesian_reconstruction_fc.cpp  noncartesian_reconstruction_fc.h  reconParams.h
toolboxes/nhlbi_gt_toolbox/standalones/: CMakeLists.txt
toolboxes/nhlbi_gt_toolbox/standalones/deconstruct/: CMakeLists.txt  deconstruction.cpp
toolboxes/nhlbi_gt_toolbox/standalones/recon_2D/: CMakeLists.txt  reconstruction_2D.cpp
toolboxes/nhlbi_gt_toolbox/standalones/sense_3d/: CMakeLists.txt  reconstruction.cpp
toolboxes/nhlbi_gt_toolbox/utils/: CMakeLists.txt  cpuSVD.cpp  cpuSVD.h  mri_core_girf_correction_lit.cpp  mri_core_girf_correction_lit.h  util_functions.cpp  util_functions.h
toolboxes/nhlbi_gt_toolbox/utils/concomitantFieldCorrection/: SpiralConcomitantCorrectionGadget.cpp  mri_concomitant_field_correction_lit.cpp  mri_concomitant_field_correction_lit.h
toolboxes/nhlbi_gt_toolbox/utils/gpu/: cuda_utils.cu  cuda_utils.h  gpuSVD.cu  gpuSVD.cuh
toolboxes/nhlbi_gt_toolbox/utils/gpu/gpuregistration/: gpuRegistration.cu  gpuRegistration.cuh
toolboxes/nhlbi_gt_toolbox/utils/gpu/gpuregistration/internal/: cubicTex1D_kernel.cu  cubicTex2D_kernel.cu
toolboxes/nhlbi_gt_toolbox/utils/python/: BinningGadget.py  BinningOnTheFlyGadget.py  CardiacBinningGadget.py  CardiacRespiGadget.py  GriddingTCRGadget.py  Pulseq_WaveformToTrajectory.py  ROVirGadget.py  RovirGadget.py  SlicerGadget.py  SmartNavGadget.py  coil_maps.py  gcc.py  kspace_preconditioning.py  mrdhelper.py  storage_server.py  tcr_utils.py  utils_function.py
toolboxes/nhlbi_gt_toolbox/utils/python/operators/: low_rank.py
toolboxes/nhlbi_gt_toolbox/utils/python/pgadgets/: CMakeLists.txt  demo.cpp
toolboxes/nhlbi_gt_toolbox/utils/python/registration/: registration_gadget.py  registration_gadget_call.py  registration_oflow3D.py
toolboxes/solvers/gpu/: cuGpBbSolver.h
utils/: CMakeLists.txt  util_functions.cpp  util_functions.h
utils/FeedbackSNR/: AcquisitionAccumulateTriggerGadget_LIT.cpp  AcquisitionAccumulateTriggerGadget_LIT.h  AverageReconGadget.cpp  FeedbackTestGadget.cpp  ImageAndFeedback.cpp
utils/Flow/: AutoScaleFlow.cpp
utils/gpu/: cuda_utils.cu  cuda_utils.h
utils/gpu/gpuregistration/: cubicTex3D.cu
utils/gpu/gpuregistration/internal/: cubicPrefilter_kernel.cu  cubicTex3D_kernel.cu
utils/python/: FlowPhaseSubstraction.py  Optimal_VENC_detection.py  SegmentandCalculateFlowGadget.py  SegmentationFlowGadget.py  acvl_utils_bounding_boxes.py  acvl_utils_numpy.py  gadgetron_cmr_segmentation_util.py  nnUnet_utils_numpy.py  sliding_window_prediction_onnx.py  utils_function.py
(+4 files in other folders)
